updated the code for the service and dynamicRule engien